--- a/httpie-requests/create-project.json
+++ b/httpie-requests/create-project.json
@@ -1,6 +1,7 @@
 {
-    "description": "Proyecto nuevo project",
-    "projectIdentifier": "project-fire",
-    "projectName": "project-pyro"
+    "projectIdentifier":"BLM-1",	
+    "description": "Proyecto tigo",
+    "projectName":"TIGO-BL1"
+    
 }
 
