--- a/src/main/resources/static/react-client/package.json
+++ b/src/main/resources/static/react-client/package.json
@@ -10,12 +10,21 @@
     "@types/node": "^12.20.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-router-redux": "^5.0.18",
+    "@types/redux-thunk": "^2.1.0",
     "bootstrap": "^4.6.0",
+    "joi": "^17.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.5",
     "web-vitals": "^1.0.1"
   },
