Add new reducer for people

--- a/httpie-requests/create-project.json
+++ b/httpie-requests/create-project.json
@@ -1,7 +1,7 @@
 {
-    "projectIdentifier":"BLM-1",	
+    "projectIdentifier":"blam-new",
     "description": "Proyecto tigo",
-    "projectName":"TIGO-BL1"
+    "projectName":"blm-1"
     
 }
 
