--- a/src/main/resources/static/react-client/package.json
+++ b/src/main/resources/static/react-client/package.json
@@ -14,7 +14,9 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-router-redux": "^5.0.18",
     "@types/redux-thunk": "^2.1.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "classnames": "^2.2.6",
     "joi": "^17.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
